Deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-cluster-ip
  namespace: default
spec:
  ports:
    - name: http
      port: 30123
      protocol: TCP
      targetPort: 8123
  selector:
    app: home-assistant
  type: LoadBalancer
